tests/out/call.test
Cog: Error: (10:6): cannot pass 'int' to type 'cstr'
    ----> tests/call.cg
    10 |	foo(age);
       |	    ^~~  
cog: 1 semantic errors occurred
Cog: compilation aborted
